--- a/Ex3.html
+++ b/Ex3.html
@@ -18,7 +18,7 @@
     <section class="container">
         <div>
              <div id="relative-img">
-                <img src="recipe-1.jpg" alt="pancake">
+                <img src="images/recipe-1.jpg" alt="pancake">
                 <span class="grey-box">January 23,2022<br>Posted By Marie </span>
                 <span id="cream-box">Breakfast</span>
                 <h2>PUFFY PANCAKE GLAZED WITH CARAMEL TOPPED WITH FRUITS</h2>
@@ -26,7 +26,7 @@
             </div>
 
              <div id="relative-img">
-                <img src="recipe-2.jpg" alt="cake">
+                <img src="images/recipe-2.jpg" alt="cake">
                 <span class="grey-box">January 23,2022<br>Posted By Marie </span>
                 <span id="cream-box">Sweats</span>
                 <span id="cream-box">Breakfast</span>
@@ -34,7 +34,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content...</p>
             </div>
              <div id="relative-img">
-                <img src="recipe-3.jpg" alt="stake">
+                <img src="images/recipe-3.jpg" alt="stake">
                 <span class="grey-box">January 23,2022<br>Posted By Marie </span>
                 <span id="cream-box">Cuisine</span>
                 <span id="cream-box">Dinner</span>
@@ -44,7 +44,7 @@
         </div>
         <div>
              <div id="relative-img">
-                <img src="recipe-4.jpg" alt="Larg pancake">
+                <img src="images/recipe-4.jpg" alt="Larg pancake">
                 <span class="grey-box">January 23,2022<br>Posted By Marie </span>
                 <span id="cream-box">Breakfast</span>
                 <h2>PUFFY PANCAKE GLAZED WITH CARAMEL TOPPED WITH FRUITS</h2>
@@ -52,7 +52,7 @@
             
             </div>
              <div id="relative-img">
-                <img src="recipe-5.jpg" alt="nodels">
+                <img src="images/recipe-5.jpg" alt="nodels">
                 <span class="grey-box">January 23,2022<br>Posted By Marie </span>
                 <span id="cream-box">Pasta</span>
                 <span id="cream-box">Lunch</span>
